--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "sharp": "^0.33.5",
+    "svgexport": "^0.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
